--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: Ginger Barham
 logo: "/images/Blue.jpg?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
+description:
+  Full-Stack Software Engineer
   <a href="https://www.linkedin.com/in/gingermbarham/" target="_blank">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
