--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Ginger Barham
-description:
-  Full-Stack Software Engineer
+description: Full-Stack Software Engineer
 logo: "/images/Blue.jpg?raw=true" # your photo (or logo) here
   <br>
   <a href="https://www.linkedin.com/in/gingermbarham/" target="_blank">www.linkedin.com/in/gingermbarham</a> 
-  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
