--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Ginger Barham
 logo: "/images/Blue.jpg?raw=true" # your photo (or logo) here
 description:
   Full-Stack Software Engineer
-  <a href="https://www.linkedin.com/in/gingermbarham/" target="_blank">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/gingermbarham/" target="_blank">www.linkedin.com/in/gingermbarham</a> 
 
 theme: jekyll-theme-minimal
